maquetado de home

--- a/src/styles/components/button.css
+++ b/src/styles/components/button.css
@@ -38,3 +38,11 @@
 .colorGris {
     color: gray;
 }
+
+.colorNegro {
+    color: var(--negro);
+}
+
+.borderNegro {
+    border: solid 1px black;
+}
