avance de maquetado de vista headphone

--- a/src/styles/components/index.css
+++ b/src/styles/components/index.css
@@ -3,3 +3,6 @@
 @import "button.css";
 @import "card-product.css";
 @import "categories.css";
+@import "downstairs.css";
+@import "card-product-detail.css";
+@import "view-name.css";
