--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -5,6 +5,7 @@
     background-color: var(--negro-claro);
     color: var(--blanco);
     align-items: center;
+    border-bottom: solid 1px rgb(70, 70, 70);
 }
 
 .header-container__logo__term{
