--- a/src/styles/pages/home/card-product2.css
+++ b/src/styles/pages/home/card-product2.css
@@ -12,6 +12,6 @@
     background-color: var(--gris);
 }
 
-.container-card-product2__name, .container-button{
+.container-card-product2 .container-card-product2__name, .container-card-product2 .container-button{
     margin-left: 30px;
 }
