--- a/src/styles/pages/home/home.css
+++ b/src/styles/pages/home/home.css
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     row-gap: 25px;
-    background-image: url("../../assets/home/mobile/image-header.jpg");
+    background-image: url("../../../assets/home/mobile/image-header.jpg");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
