avance de maquetado de vista speakers

--- a/src/styles/pages/index.css
+++ b/src/styles/pages/index.css
@@ -1,4 +1,6 @@
 @import "home/home.css";
 @import "home/card-speaker";
 @import "home/card-product2.css";
-@import "home/container-cards-product2.css"
+@import "home/container-cards-product2.css";
+@import "headphones/headphone.css";
+@import "speakers/speaker.css";
