--- a/src/styles/components/index.css
+++ b/src/styles/components/index.css
@@ -6,3 +6,6 @@
 @import "downstairs.css";
 @import "card-product-detail.css";
 @import "view-name.css";
+@import "product.css";
+@import "suggested-product.css";
+@import "suggested-products.css";
