--- a/src/styles/components/index.css
+++ b/src/styles/components/index.css
@@ -9,3 +9,5 @@
 @import "product.css";
 @import "suggested-product.css";
 @import "suggested-products.css";
+@import "modal.css";
+@import "empty-cart.css";
