--- a/src/styles/components/footer.css
+++ b/src/styles/components/footer.css
@@ -6,7 +6,7 @@
     align-items: center;
     padding: 45px 0px;
     row-gap: 45px;
-    margin-top: 60px;
+    /* margin-top: 60px; */
 }
 
 .container-footer__title{
