--- a/src/styles/components/modal.css
+++ b/src/styles/components/modal.css
@@ -10,6 +10,12 @@
     justify-content: space-between;
 }
 
+.container-modal__list{
+    display: flex;
+    flex-direction: column;
+    row-gap: 15px;
+}
+
 .container-modal__list__item{
     display: flex;
     align-items: center;
@@ -23,6 +29,10 @@
 .item__photo img{
     width: 100%;
     border-radius: 8px;
+}
+
+.item__overview__price{
+    color: gray;
 }
 
 .item__amount{
