--- a/src/styles/components/categories.css
+++ b/src/styles/components/categories.css
@@ -3,3 +3,12 @@
     flex-direction: column;
     align-items: center;
 }
+
+@media screen and (min-width: 576px) {
+    .container-categories{
+        flex-direction: row;
+        column-gap: 15px;
+        width: 90%;
+        margin: 0 auto;
+    }
+}
