--- a/src/styles/components/modal.css
+++ b/src/styles/components/modal.css
@@ -52,3 +52,10 @@
     display: flex;
     justify-content: center;
 }
+
+@media screen and (min-width: 576px){
+    /* .container-modal{
+        width: 50%;
+
+    } */
+}
