--- a/src/styles/components/suggested-product.css
+++ b/src/styles/components/suggested-product.css
@@ -18,3 +18,10 @@
 .container-suggested-product__photo img {
     width: 100%;
 }
+
+@media screen and (min-width: 576px) {
+    .container-suggested-product{
+        width: 100%;
+        margin: 50px 0px;
+    }
+}
