--- a/src/styles/components/suggested-products.css
+++ b/src/styles/components/suggested-products.css
@@ -5,3 +5,12 @@
     row-gap: 35px;
     margin: 25px 0px;
 }
+
+@media screen and (min-width: 576px) {
+    .container-suggested-products{
+        flex-direction: row;
+        column-gap: 15px;
+        width: 90%;
+        margin: 0 auto;
+    }
+}
