--- a/src/styles/pages/home/card-product2.css
+++ b/src/styles/pages/home/card-product2.css
@@ -8,7 +8,7 @@
     justify-content: center;
     row-gap: 30px;
     width: 90%;
-    /* margin: 0 auto; */
+    margin: 0 auto;
     background-color: var(--gris);
 }
 
