--- a/src/styles/components/card-product.css
+++ b/src/styles/components/card-product.css
@@ -26,3 +26,9 @@
         width: 100%;
     }
 }
+
+@media screen and (min-width: 992px) {
+    .container-card-product__photo{
+        width: 50%;
+    }
+}
