--- a/src/styles/components/categories.css
+++ b/src/styles/components/categories.css
@@ -12,3 +12,9 @@
         margin: 0 auto;
     }
 }
+
+@media screen and (min-width: 992px) {
+    .container-categories{
+        width: 80%;
+    }
+}
