--- a/src/styles/components/checkout.css
+++ b/src/styles/components/checkout.css
@@ -54,7 +54,8 @@
 
 .billing-details__form__input, 
 .shipping-info__form__input,
-.payment-details__form__input{
+.payment-details__form__input,
+.your-address{
     display: flex;
     flex-direction: column;
     row-gap: 5px;
@@ -85,7 +86,7 @@
 }
 
 .cart-list__item__photo{
-    width: 20%;
+    width: 30%;
 }
 
 .cart-list__item__photo img{
@@ -119,6 +120,27 @@
 .sub-container__summary__button{
     display: flex;
     justify-content: center;
+}
+
+.sub-container__checkout__title{
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.sub-container__summary__title{
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.sub-container__summary__cart-list__item-description{
+    display: flex;
+    column-gap: 15px;
+    align-items: center;
+}
+
+.cart-list__item__overview__description,
+.cart-list__item__amount{
+    font-weight: bold;
 }
 
 
@@ -160,9 +182,32 @@
     align-items: center;
 }
 
+.container-modal-order__detail__list__item-description{
+    display: flex;
+    column-gap: 15px;
+    align-items: center;
+
+}
+
+.detail__list__item__overview__description{
+    font-weight: bold;
+}
+
+.detail__list__item__overview__price{
+    color: gray;
+}
+
+.detail__list__item__amount{
+    color: gray;
+    font-weight: bold;
+}
+
 .container-modal-order__detail__total{
     display: flex;
     flex-direction: column;
+    padding: 25px;
+    row-gap: 10px;
+    justify-content: center;
 }
 
 .container-modal-order__button{
@@ -171,9 +216,88 @@
 }
 
 .detail__list__item__photo{
-    width: 20%;
+    width: 30%;
 }
 
 .detail__list__item__photo img{
     width: 100%;
+}
+
+.sumary__detail__term{
+    color: gray;
+}
+
+.sumary__detail__subtotal{
+    font-weight: bold;
+}
+
+.sumary__detail__grandtotal{
+    font-weight: bold;
+    color: var(--naranja);
+}
+
+.container-modal-order__detail__total__term{
+    color: gray;
+}
+
+.container-modal-order__detail__total__money{
+    font-weight: bold;
+}
+
+@media screen and (min-width: 576px) {
+    .checkout__billing-details__form,
+    .checkout__shipping-info__form,
+    .checkout__payment-details__form{
+        flex-direction: row;
+        flex-wrap: wrap;
+        column-gap: 4%;
+    }
+
+    .billing-details__form__input,
+    .shipping-info__form__input,
+    .payment-details__form__input{
+        width: 48%;
+    }
+
+    .your-address{
+        display: flex;
+        flex-direction: column;
+        row-gap: 5px;
+        width: 100%;
+    }
+
+    .container-modal-order__detail{
+        display: flex;
+    }
+
+    .container-modal-order__detail__list{
+        width: 55%;
+        border-top-right-radius: 0px;
+        border-bottom-left-radius: 10px;
+    }
+
+    .container-modal-order__detail__total{
+        width: 45%;
+        border-bottom-left-radius: 0px;
+        border-top-right-radius: 10px;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .container-checkout__sub-container{
+        display: flex;
+        column-gap: 50px;
+        width: 80%;
+    }
+
+    .sub-container__checkout{
+        width: 70%;
+        border-radius: 10px;
+    }
+
+    .sub-container__summary{
+        margin: 0;
+        width: 30%;
+        border-radius: 10px;
+    }
 }
