--- a/src/styles/components/product.css
+++ b/src/styles/components/product.css
@@ -68,6 +68,23 @@
     color: gray;
 }
 
+.container-product-detalle__subdetalle{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+}
+
+.container-product__features, .container-product__box{
+    margin: 30px 0px;
+}
+
+.container-product__features__title, .container-product__box-title{
+    font-size: 26px;
+    font-weight: bold;
+    margin-bottom: 50px;
+}
+
 @media screen and (min-width: 576px) {
     .container-product-detalle{
         display: flex;
@@ -105,7 +122,8 @@
         justify-content: space-between;
     }
 
-    .container-product__box-title{
+    .container-product__box-title,
+    .container-product__features__title{
         font-size: 24px;
         font-weight: bold;
     }
@@ -130,5 +148,48 @@
 
     .container-product__gallery__part2{
         width: 50%;
+    }
+}
+
+@media screen and (min-width: 992px){
+    .container-product{
+        width: 80%;
+    }
+
+    .container-product-detalle{
+        align-items: center;
+        column-gap: 100px;
+    }
+
+    .container-product-detalle__subdetalle{
+        row-gap: 30px;
+    }
+
+    .container-product__title{
+        font-size: 40px;
+    }
+
+    .container-product__overview{
+        width: 70%;
+    }
+
+    .container-product-includes{
+        flex-direction: row;
+        column-gap: 100px;
+        margin-bottom: 60px;
+    }
+
+    .container-product__features{
+        width: 60%;
+        display: flex;
+        flex-direction: column;
+        row-gap: 20px;
+    }
+
+    .container-product__box{
+        width: 40%;
+        flex-direction: column;
+        justify-content: flex-start;
+        row-gap: 20px;
     }
 }
