--- a/src/styles/components/suggested-products.css
+++ b/src/styles/components/suggested-products.css
@@ -14,3 +14,9 @@
         margin: 0 auto;
     }
 }
+
+@media screen and (min-width: 992px) {
+    .container-suggested-products{
+        width: 80%;
+    }
+}
