--- a/src/styles/components/view-name.css
+++ b/src/styles/components/view-name.css
@@ -6,3 +6,14 @@
     font-size: 20px;
     margin-bottom: 20px;
 }
+
+@media screen and (min-width: 576px) {
+    .container-view-name{
+        height: 150px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 35px;
+        margin-bottom: 100px;
+    }
+}
