--- a/src/styles/pages/home/container-cards-product2.css
+++ b/src/styles/pages/home/container-cards-product2.css
@@ -20,3 +20,11 @@
         column-gap: 20px;
     }
 }
+
+@media screen and (min-width: 992px) {
+    .container-cards-product2{
+        width: 90%;
+        margin: 0 auto;
+        margin-top: 50px;
+    }
+}
